Subo ejercicios clase 13 a 19

--- a/clase-5-modelocaja/ejercicio-1-modelocaja/Notificación.html
+++ b/clase-5-modelocaja/ejercicio-1-modelocaja/Notificación.html
@@ -9,7 +9,7 @@
     <body>
         <main>
             <div>
-                <img src="descarga.png" alt="Campana de notificación">
+                <img src="descarga.png" alt="Campana de notificación" class="cover-img">
             </div>
             <div class="texto">
                 <h2>Notifications</h2>
